# BenchmarkingProofAssistants

./: .gitignore  cabal.project  hie.yaml
.github/workflows/: golden.yml  publish.yml  static.yml
panbench/: hie.yaml
panbench/generators/: panbench-generators.cabal
panbench/generators/app/: LetAddExample.hs
panbench/generators/src/Panbench/: Generator.hs
panbench/generators/src/Panbench/Generator/: DatatypeParameters.hs  LargeDependentRecord.hs  LargeIndexedDatatype.hs  LargeIndexedParameterisedDatatype.hs  LargeSimpleDatatype.hs  LargeSimpleRecord.hs  NestedLet.hs  NestedLetAdditions.hs  NestedLetFunctions.hs  Newlines.hs  RecordParameters.hs  SequentialDefinitions.hs  SequentialDependentRecords.hs  SequentialSimpleRecords.hs  SimpleDataDefinitions.hs
panbench/generators/test/golden/: Main.hs
panbench/generators/test/snapshot/: ChainDefFields_NonDependentRecordModule.agda  ChainDefFields_NonDependentRecordModule.idr  ChainDefFields_NonDependentRecordModule.lean  ChainDefFields_NonDependentRecordModule.v  ChainDef_DependentRecordModule.agda  ChainDef_DependentRecordModule.idr  ChainDef_DependentRecordModule.lean  ChainDef_DependentRecordModule.v  Constructors_Datatypes.agda  Constructors_Datatypes.idr  Constructors_Datatypes.lean  Constructors_Datatypes.v  DataSimpleDeclarations.agda  DataSimpleDeclarations.idr  DataSimpleDeclarations.lean  DataSimpleDeclarations.v  Fields_DependentRecordModule.agda  Fields_DependentRecordModule.idr  Fields_DependentRecordModule.lean  Fields_DependentRecordModule.v  Fields_NonDependentRecordModule.agda  Fields_NonDependentRecordModule.idr  Fields_NonDependentRecordModule.lean  Fields_NonDependentRecordModule.v  FirstLast_VariableModule.agda  FirstLast_VariableModule.idr  FirstLast_VariableModule.lean  FirstLast_VariableModule.v  IndicesParameters_Datatypes.agda  IndicesParameters_Datatypes.idr  IndicesParameters_Datatypes.lean  IndicesParameters_Datatypes.v  IndiciesConstructors_Datatypes.agda  IndiciesConstructors_Datatypes.idr  IndiciesConstructors_Datatypes.lean  IndiciesConstructors_Datatypes.v  LetAddExample.agda  LetAddExample.idr  LetAddExample.lean  LetAddExample.v  (+19 more)
panbench/generators/test/staging/: LetAddExample.agda
panbench/grammar/: panbench-grammar.cabal
panbench/grammar/src/: Panbench.hs
panbench/grammar/src/Panbench/: Grammar.hs  Pretty.hs
panbench/grammar/src/Panbench/Grammar/: Agda.hs  Cell.hs  Idris.hs  Lean.hs  Rocq.hs
panbench/grammar/src/Print/: Agda.hs
panbench/grammar/test/snapshot/: IndicesParameters_Datatypes.v
panbench/site/: panbench-site.cabal
panbench/site/app/: Main.hs
panbench/site/app/Panbench/Shake/: Benchmark.hs  Chez.hs  Env.hs  File.hs  Git.hs  HTML.hs  Lang.hs  Make.hs  Matrix.hs  Opam.hs
panbench/site/app/Panbench/Shake/Lang/: Agda.hs  Idris.hs  Lean.hs  Rocq.hs
panbench/translators/: translators.cabal
panbench/translators/src/: Grammar.hs  Panbench.hs
panbench/translators/src/Panbench/: Generator.hs  Grammar.hs  Lang.hs  Pretty.hs
panbench/translators/src/Panbench/Grammar/: Agda.hs
panbench/translators/src/Print/: Agda.hs
panbench/translators/test/snapshot/: ChainDefFields_NonDependentRecordModule.agda  ChainDefFields_NonDependentRecordModule.lean  IndicesConstructors_Datatypes.v
site/: panbench-site.cabal
site/app/: Main.hs
site/app/Panbench/Shake/: AllCores.hs  Benchmark.hs  Digest.hs  Env.hs  Git.hs  Lang.hs  Make.hs  Matrix.hs  Opam.hs  Store.hs
site/app/Panbench/Shake/Install/: Agda.hs  Idris.hs  Lean.hs  Rocq.hs
site/app/Panbench/Shake/Lang/: Agda.hs  Idris.hs  Lean.hs  Rocq.hs
translators/: translators.cabal
translators/src/: Grammar.hs  Tests.hs
translators/src/Panbench/: Lang.hs
translators/src/Print/: .Rocq.hs.swp  Agda.hs  Generic.hs  Idris.hs  Lean.hs  Rocq.hs
translators/test/snapshot/: ChainDefFields_NonDependentRecordModule.idr  ChainDefFields_NonDependentRecordModule.v  ChainDef_DependentRecordModule.agda  ChainDef_DependentRecordModule.idr  ChainDef_DependentRecordModule.lean  ConstructorsParameters_Datatypes.v  Constructors_Datatypes.v  DataImplicitIndices.v  DataSimpleDeclarations.v  Parameters_Datatypes.v  Parameters_DependentRecordModule.v  Pattern_Matching_Datatypes.agda  Pattern_Matching_Datatypes.idr  Pattern_Matching_Datatypes.v
