cabal-version:      3.0
name:               panbench-generators
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Reed Mullanix
maintainer:         mullanir@mcmaster.ca
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Wno-name-shadowing

common extensions
     default-extensions:
       BlockArguments,
       DeriveAnyClass,
       DeriveGeneric,
       DerivingStrategies,
       GeneralizedNewtypeDeriving,
       ImportQualifiedPost,
       LambdaCase,
       OverloadedStrings

library
    import: warnings, extensions
    exposed-modules:
        Panbench.Generator
        Panbench.Generator.NestedLet
        Panbench.Generator.NestedLetAdditions
        Panbench.Generator.NestedLetFunctions
        Panbench.Generator.SimpleDataDefinitions
        Panbench.Generator.LargeDependentRecord
        Panbench.Generator.SequentialDependentRecords
        Panbench.Generator.RecordParameters
        Panbench.Generator.Newlines
        Panbench.Generator.LargeSimpleRecord
        Panbench.Generator.SequentialSimpleRecords
        Panbench.Generator.LargeSimpleDatatype
        Panbench.Generator.DatatypeParameters
        Panbench.Generator.SequentialDefinitions
        Panbench.Generator.LargeIndexedDatatype
        Panbench.Generator.LargeIndexedParameterisedDatatype
    build-depends:
        base >=4.17.2.0,
        text >= 2.1 && <3.0,
        panbench-grammar
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        BlockArguments
        ImportQualifiedPost
        OverloadedStrings

test-suite panbench-generators
    import: warnings, extensions
    main-is: Main.hs
    other-modules:
        Golden.Util.File
    build-depends:
        base >=4.17.2.0,
        containers >= 0.6 && < 0.7,
        prettyprinter >=1.7.1 && < 2.0,
        text >= 2.1 && < 3.0,
        directory >= 1.3,
        filepath >= 1.5,
        tasty >= 1.5,
        tasty-golden >= 2.3,
        panbench-generators,
        panbench-grammar,
    if os(windows)
        build-depends: Win32 >= 2.12
    else
        build-depends: unix  >= 2.8
    hs-source-dirs: test/golden
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    
